# Book-ProgrammingPrinciplesAndPracticeUsingCpp

./: .gitignore  CMakeLists.txt  main.cpp
Chapter00/: CMakeLists.txt  main.cpp
Chapter00/ForNewProject(2018-10-20)/: Declarations.h  main.cpp
Chapter00/Source/: Drills.h  Example.h  Exercices.h  TryThis.h  std_lib_facilities.h
Chapter03/: CMakeLists.txt  main.cpp
Chapter03/Source/: Drills.h  Example.h  TryThis.h  Utilities.h  std_lib_facilities.h
Chapter04/: CMakeLists.txt  main.cpp
Chapter04/Source/: Drills.h  Example.h  Exercices.h  TryThis.h  Utilities.h  std_lib_facilities.h
Chapter05/: CMakeLists.txt  Declarations.h  main.cpp
Chapter06/: CMakeLists.txt  CalculatorV1.cpp  CalculatorV1.h  CalculatorV2.cpp  CalculatorV2.h  Declarations.cpp  Declarations.h  Exercise02.cpp  Exercise03.cpp  Provided6_7.cpp  main.cpp
Chapter07/: CMakeLists.txt  CalculatorCh06.cpp  CalculatorCh06.h  CalculatorV1.cpp  CalculatorV1.h  Drill.cpp  Drill.h  Exercises.cpp  Exercises.h  HandsOn.cpp  HandsOn.h  Solution7_8_2.cpp  VariousDeclarations.h  main.cpp
Chapter08/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
Chapter09/: Book.cpp  Book.h  CMakeLists.txt  Chrono.cpp  Chrono.h  Drill.cpp  Drill.h  NamePairs.cpp  NamePairs.h  main.cpp
Chapter10/: CMakeLists.txt  FinalExample.cpp  FinalExample.h  Invalid.h  Months.txt  Temperatures.txt  Years.txt  YearsComplete.txt  main.cpp
Chapter17/: CMakeLists.txt  Link.cpp  Link.h  TryThis.cpp  TryThis.h  main.cpp
Chapter18/: CMakeLists.txt  main.cpp
Chapter19/: CMakeLists.txt  Vector.h  book19_3_7.cpp  main.cpp
(+9 files in other folders)
